spacing fixes

--- a/app/frontend/src/containers/IngredientPage/IngredientPage.css
+++ b/app/frontend/src/containers/IngredientPage/IngredientPage.css
@@ -1,5 +1,5 @@
 .TextInput {
     justify-content: center;
     display: flex;
-    padding: 8vh;
+    padding: 6vh;
 }
